Fix button alignment

--- a/plugins/woocommerce/client/admin/client/settings-payments/settings-payments-main.scss
+++ b/plugins/woocommerce/client/admin/client/settings-payments/settings-payments-main.scss
@@ -48,6 +48,12 @@ $font-sf-pro-display: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe U
 			border-top: 1px solid $gray-200;
 			border-bottom: 1px solid $gray-200;
 
+			.woocommerce-item__woocommerce-payment {
+				.woocommerce-list__item-inner {
+					align-items: flex-start;
+				}
+			}
+
 			&__item {
 				padding: 0 48px;
 
@@ -65,7 +71,6 @@ $font-sf-pro-display: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe U
 			}
 
 			&__item-inner {
-				align-items: flex-start;
 				padding: $gap-large 0;
 			}
 
